# rwa4

./: CMakeLists.txt  package.xml  readme.md
config/: a.scene
config/sensor_config/: motion_control_sensor.yaml
config/trial_config/: rwa0.yaml  rwa2_trial.yaml  rwa3.yaml  rwa4.yaml  rwa4af.yaml  rwa4t.yaml
config/user_config/: group3_config.yaml
docs/: instructions.txt
html/: md_readme.html  pages.html
html/search/: all_0.js  pages_0.js
include/: agility.hpp  ariac_agv.hpp  arm.hpp  blackout.hpp  conveyor_belt_monitor.hpp  gantry.hpp  sensors.hpp  utils.hpp
latex/: md_readme.tex  refman.tex
launch/: ariac.launch  gantry.launch  main.launch  rwa4.launch
rviz/: arm_moveit.rviz  gantry_moveit.rviz
src/: agility.cpp  ariac_agv.cpp  arm.cpp  arm_controller.cpp  blackout.cpp  blackout_controller.cpp  complete_controller.cpp  conveyor_belt_monitor.cpp  conveyor_belt_monitor_controller.cpp  gantry.cpp  gantry_controller.cpp  obstacle_controller.cpp  utils.cpp
srv/: GetConveyorBeltPartPickPose.srv
